# libpythonpro

./: .coverage  .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: main.yml
libpythonpro/: github_api.py
libpythonpro/spam/: enviador_de_email.py
tests/: test_spam.py
